# plain-text-fitness

./: .gitignore  pyproject.toml
ptf/: data.hy  data.py  data_old.py  load.py  util.hy
ptf/files/: fit.py
ptf/grammar/: ptf.lark  transformer.py
ptf/ptfui/: __init__.py  dist
ptfui/: package-lock.json  package.json
