[tool.poetry]
name = "ptf"
version = "0.1.0"
description = ""
authors = ["Lachlan Holden <lachlan.holden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fitdecode = "^0.10.0"
lark = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
