[tool.poetry]
name = "ptf"
version = "0.1.0"
description = ""
authors = ["Lachlan Holden <lachlan.holden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fitdecode = "^0.10.0"
lark = "^1.1.9"
flask = "^3.0.3"
hy = "^0.28.0"
hyrule = "^0.5.0"
toolz = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
